--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
+    "@react-three/drei": "^7.0.6",
+    "@react-three/fiber": "^7.0.4",
     "clsx": "^1.1.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "three": "^0.130.1"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@types/three": "^0.130.0",
     "autoprefixer": "^10.3.0",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
