add captcha validation

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 WHOIS_EMAIL_VERIFICATION_API_KEY=SECRET
+WEB3_FORMS_API_KEY=SECRET
+GRECAPTCHA_SECRET=SECRET
+
+NEXT_PUBLIC_GRECAPTCHA_KEY_ID=STRING
