--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,12 @@
 {
+  "version": "0.2.0",
   "configurations": [
     {
-      "name": "Start App",
+      "command": "./node_modules/.bin/astro dev",
+      "name": "Dev",
       "request": "launch",
-      "runtimeArgs": ["dev"],
-      "runtimeExecutable": "yarn",
-      "skipFiles": ["<node_internals>/**"],
-      "type": "node",
-      "console": "integratedTerminal"
+      "type": "node-terminal",
+      "outputCapture": "console"
     }
   ]
 }
