--- a/package.json
+++ b/package.json
@@ -1,33 +1,19 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "astro",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.13",
-    "@next/font": "13.1.2",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@vercel/analytics": "^0.1.8",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.2",
-    "formik": "^2.2.9",
-    "next": "13.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "server-only": "^0.0.1",
-    "typescript": "4.9.4",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "@astrojs/solid-js": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "astro": "^3.0.7",
+    "solid-js": "^1.7.11",
+    "tailwindcss": "^3.3.3"
   }
 }
