get form working again

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "name": "Dev",
       "request": "launch",
       "type": "node-terminal",
-      "outputCapture": "console"
+      "outputCapture": "console",
     }
   ]
 }
