--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "preview": "astro build && wrangler pages dev ./dist"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^7.0.1",
@@ -20,5 +20,8 @@
     "clsx": "^2.0.0",
     "solid-js": "^1.7.11",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "wrangler": "^3.6.0"
   }
 }
