--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/cloudflare": "^7.0.1",
     "@astrojs/solid-js": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@builder.io/qwik": "^1.2.19",
     "@modular-forms/solid": "^0.19.2",
+    "@qwikdev/astro": "^0.2.3",
     "@solid-primitives/event-listener": "^2.3.0",
     "@solid-primitives/utils": "^6.2.1",
     "astro": "^3.0.7",
